--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Para-Scratch</title>
     <link rel="stylesheet" href="style.css">
-    <script src="bower_components/jQuery/dist/jquery.min.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
     <script src="parallax.js"></script>
 </head>
 
